# qdash

./: .betterleaks.toml  .betterleaksignore  .clinerules  .dockerignore  .env.example  .env.example.qubex  .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  .openapi-python-client.yaml  .openapi-python-client.yml  .readthedocs.yaml  .trufflehog-exclude-paths.txt  AGENTS.md  CITATION.cff  CLAUDE.md  GITHUB_ISSUE_INSTRUCTIONS.md  ISSUE_METRICS_UI_IMPROVEMENTS.md  LICENSE  README copy.md  README.md  README_ISSUE_CREATION.md  README_PYTHON_CLIENT.md  Taskfile.yaml  codecov.yml  compose.dev.yaml  compose.devcontainer.yaml  compose.forward.yaml  compose.local.yaml  compose.yaml  example.compose.override.yaml  expample.mcp.json  flake.nix  lefthook.yml  pyproject.toml  pytest.ini  renovate.json5
qdash_client/: .qdash-preserve  README.md  pyproject.toml
qdash_client/api/auth/: auth_login.py  auth_logout.py  auth_read_users_me.py  auth_register_user.py
qdash_client/api/backend/: fetch_all_backends.py
qdash_client/api/calibration/: delete_calib_schedule.py  execute_calib.py  fetch_all_calib_schedule.py  list_cron_schedules.py  schedule_calib.py  schedule_cron_calib.py
qdash_client/api/chip/: fetch_chip.py  fetch_chip_dates.py  fetch_execution_by_chip_id.py  fetch_historical_coupling_task_grouped_by_chip.py  fetch_historical_qubit_task_grouped_by_chip.py  fetch_latest_coupling_task_grouped_by_chip.py  fetch_latest_qubit_task_grouped_by_chip.py  fetch_mux_details.py  fetch_timeseries_task_result_by_tag_and_parameter.py  fetch_timeseries_task_result_by_tag_and_parameter_and_qid.py  list_chips.py  list_executions_by_chip_id.py  list_muxes.py
qdash_client/api/device_topology/: get_device_topology.py  get_device_topology_plot.py
qdash_client/api/execution/: fetch_execution_lock_status.py  fetch_figure_by_path.py
qdash_client/api/file/: download_file.py  download_zip_file.py
qdash_client/api/menu/: create_menu.py  delete_menu.py  get_menu_by_name.py  list_menu.py  list_preset.py  update_menu.py
qdash_client/api/parameter/: fetch_all_parameters.py
qdash_client/api/settings/: fetch_config.py
qdash_client/api/tag/: list_all_tag.py
qdash_client/api/task/: fetch_all_tasks.py
qdash_client/models/: __init__.py  auth_login_response_auth_login.py  auth_logout_response_auth_logout.py  backend_response_model.py  batch_node.py  body_auth_login.py  calibration_note_response.py  calibration_note_response_note.py  chip_dates_response.py  chip_response.py  chip_response_couplings.py  chip_response_qubits.py  condition.py  coupling.py  coupling_gate_duration.py  create_menu_request.py  create_menu_request_task_details_type_0.py  create_menu_response.py  delete_menu_response.py  detail.py  device.py  device_topology_request.py  execute_calib_request.py  execute_calib_request_task_details_type_0.py  execute_calib_response.py  execution_lock_status_response.py  execution_response_detail.py  execution_response_detail_note.py  execution_response_summary.py  execution_response_summary_note.py  fidelity_condition.py  get_menu_response.py  get_menu_response_task_details_type_0.py  http_validation_error.py  input_parameter_model.py  latest_task_grouped_by_chip_response.py  latest_task_grouped_by_chip_response_result.py  list_cron_schedule_response.py  list_menu_response.py  list_mux_response.py  (+38 more)
qdash_client/src/qdash_client/: __init__.py  exceptions.py  qdash.py
qdash_client/src/qdash_client/models/: auth_login_response_auth_login.py  calibration_note_response.py  chip_response.py  chip_response_qubits.py  condition.py  coupling.py  coupling_gate_duration.py  device.py  device_topology_request.py  execute_calib_request_task_details_type_0.py  execution_response_detail.py  execution_response_summary.py  execution_response_summary_note.py  get_menu_response.py  latest_task_grouped_by_chip_response.py  latest_task_grouped_by_chip_response_result.py  list_cron_schedule_response.py  list_menu_response.py  list_mux_response.py  list_mux_response_muxes.py  list_parameter_response.py  list_tag_response.py  list_task_response.py  mux_detail_response.py  mux_detail_response_detail.py  mux_detail_response_detail_additional_property.py  qubit.py  qubit_gate_duration.py  schedule_calib_request.py  schedule_calib_response.py  settings.py  task.py  task_input_parameters_type_0.py  task_response.py  task_response_input_parameters.py  task_response_output_parameters.py  time_series_data.py  time_series_data_data.py  user.py
src/qdash/api/: Dockerfile  app_factory.py  config.py  dependencies.py  dependency_cache.py  logging_config.py  main.py  pyproject.toml  requirements.txt  test.py
src/qdash/api/app/: __init__.py  factory.py  metadata.py  router_registry.py
src/qdash/api/db/: session.py
src/qdash/api/dependencies/: __init__.py  agent_calibration.py
src/qdash/api/lib/: ai_labels.py  auth.py  backend_config.py  config_loader.py  copilot_agent.py  copilot_analysis.py  copilot_config.py  copilot_sandbox.py  current_user.py  file_utils.py  metrics_chart.py  metrics_config.py  metrics_pdf.py  policy_config.py  project.py  project_service.py  slack.py  sse.py  topology_config.py
src/qdash/api/middleware/: request_id.py
src/qdash/api/routers/: admin.py  agent_session.py  auth.py  backend.py  calibration.py  chip.py  config.py  cooldown.py  cooldown_wiring_event.py  copilot.py  cryostat.py  dashboard.py  device_topology.py  execution.py  experiment.py  file.py  flow.py  flow_schedule.py  forum.py  fridges.py  issue.py  issue_knowledge.py  menu.py  metrics.py  note.py  notification.py  parameter.py  project.py  provenance.py  settings.py  tag.py  task.py  task_file.py  task_result.py  topology.py
src/qdash/api/schemas/: __init__.py  admin.py  (+36 more)
src/qdash/client/: .env.example  README.md  __init__.py  pyproject.toml
src/qdash/workflow/: Dockerfile  Dockerfile.deployment  __init__.py  cal_flow.py  cal_task.py  cal_util.py  deployment_service.py  handler.py  logging_config.py  main.py  paths.py  profiles.toml  pyproject.toml  register_system_flows.py  requirements.txt  setup_work_pool.py  start_worker.py
(+3338 files in other folders)
