[project]
name = "qdash"
version = "0.1.0"
description = ""
authors = [
    {name = "orangekame3", email = "oqtopus-team@googlegroups.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "bunnet>=1.3.0",
    "numpy>=1.26.0",
    "pendulum>=3.1.0",
    "pymongo>=4.8.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src",
    "src/qdash",
    "src/qdash/api",
    "src/qdash/common",
    "src/qdash/workflow",
    "src/qdash/dbmodel",
    "src/qdash/datamodel",
]

[tool.ruff]
line-length = 100
exclude = ["tools", "scripts"]
lint.unfixable = ["F401"]
# Temporarily use minimal rule set to get CI passing
lint.select = [
    "E9",  # syntax errors only
    "F63", # comparison issues
    "F7",  # syntax errors
    "F82", # undefined names
]
lint.ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN201",
    "ANN205",
    "ANN401",
    "CPY001",
    "D",
    "PLC1901",
    "PLR2004",
    "PLR6301",
    "S101",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tools", "scripts"]
# Disable error codes for known issues:
# - misc: FastAPI untyped decorator warnings
# - override: Liskov substitution violations in calibtasks (design issue)
# - no-untyped-call: Calls to untyped external library functions
disable_error_code = ["misc", "override", "no-untyped-call", "redundant-cast"]
# Use explicit package bases to avoid src.qdash vs qdash conflicts
explicit_package_bases = true
mypy_path = "src"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
api = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.34.0",
    "gunicorn==22.0.0",
    "python-dotenv==1.0.1",
    "pymongo==4.8.0",
    "bunnet==1.3.0",
    "python-jose==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "pyyaml==6.0.1",
    "python-multipart==0.0.20",
    "numpy>=1.26.0,<1.27.0",
    "matplotlib>=3.8.0",
    "networkx>=3.4.2",
    "scipy>=1.15.3",
    "httpx>=0.27.0",  # For deployment service communication
    "ruff==0.5.5",  # For auto-formatting saved flows
    "gitpython>=3.1.44",  # For Git operations in file router
    "pendulum>=3.1.0",  # For timestamp formatting in Git commits
    "pydantic-settings>=2.0.0",  # For Settings configuration
    "reportlab>=4.4.1",  # For PDF generation
    "plotly>=5.18.0",  # For chart generation
    "kaleido>=0.2.1",  # For Plotly image export
    "pillow>=10.0.0",  # For image processing
    "croniter>=6.0.0",  # For cron schedule parsing
]
workflow = [
    "pymongo==4.8.0",
    "bunnet==1.3.0",
    "slack-sdk==3.36.0",
    "python-dotenv==1.0.1",
    "numpy>=1.26.0,<1.27.0",
    "matplotlib>=3.8.0,<4.0.0",
    "pyyaml==6.0.1",
    "qubex[backend]",
    "filelock>=3.17.0",
    "gitpython>=3.1.44",
    "reportlab>=4.4.1",
    "ruamel.yaml>=0.18.0",
]
dev = [
    "ruff==0.5.5",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-env==1.1.3",
    "pytest-mypy==0.10.3",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.1",
    "mongomock==4.1.2",
    "go-task-bin>=3.41.0",
    "types-pyyaml>=6.0.12.20250809",
    "types-python-dateutil>=2.9.0.20250809",
    "types-croniter>=6.0.0.20250809",
    "types-requests>=2.32.0.20250809",
    "setuptools>=80.9.0",
]
[tool.uv.sources]
qubex = { git = "https://github.com/amachino/qubex.git", branch = "chore/chevron-fig" }
