[project]
name = "qdash_client"
version = "0.1.0"
description = "Python client for QDash API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "oqtopus-team", email = "oqtopus-team@googlegroups.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.24.0",
    "attrs>=21.3.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/oqtopus-team/qdash"
Repository = "https://github.com/oqtopus-team/qdash"
Documentation = "https://qdash.readthedocs.io/"
Issues = "https://github.com/oqtopus-team/qdash/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qdash_client"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true