[project]
name = "qdash_client"
version = "0.1.0"
description = "Python client for QDash API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "oqtopus-team", email = "oqtopus-team@googlegroups.com"}
]
license = {text = "Apache-2.0"}
dependencies = [
    "httpx>=0.24.0",
    "attrs>=21.3.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qdash_client"]