[project]
name = "qdash-api"
version = "0.1.0"
description = "QDash API service dependency project"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi",
    "uvicorn[standard]",
    "gunicorn==26.0.0",
    "python-dotenv>=1.2.2",
    "pymongo==4.17.0",
    "bunnet==1.3.0",
    "passlib[bcrypt]==1.7.4",
    "pyyaml==6.0.3",
    "python-multipart>=0.0.27",
    "numpy>=1.26.0,<2.5.0",
    "scipy",
    "matplotlib>=3.8.0",
    "networkx>=3.4.2",
    "httpx>=0.27.0",
    "ruff==0.15.14",
    "gitpython>=3.1.50",
    "pendulum>=3.1.0",
    "pydantic-settings>=2.0.0",
    "reportlab>=4.4.1",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "pillow>=12.2.0",
    "croniter>=6.0.0",
    "python-json-logger>=3.3.0",
    "openai>=1.0.0",
    "prefect-client",
    "slack-sdk==3.41.0",
]

[tool.uv]
package = false
