[project]
name = "qdash-client"
version = "0.1.0"
description = "Python client for QDash API"
authors = [
    {name = "orangekame3", email = "oqtopus-team@googlegroups.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "httpx>=0.27.0,<0.28.0",
    "attrs>=23.1.0,<25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]