[project]
name = "qdash-client"
description = "Python client for the QDash API"
authors = [
    {name = "OQTOPUS Team", email = "oqtopus-team@googlegroups.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dynamic = ["version"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
]

[project.scripts]
qdash-agent = "qdash.client.services.agent_cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^qdash-client-v(?P<version>\\d+\\.\\d+\\.\\d+)$"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
root = "../../.."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.hatch.version.raw-options.scm.git]
describe_command = "git describe --dirty --tags --long --match qdash-client-v*"

[tool.hatch.build]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "qdash/client/__init__.py"
"py.typed" = "qdash/client/py.typed"
"rest" = "qdash/client/rest"
"services" = "qdash/client/services"
