[project]
name = "qdash-workflow"
version = "0.1.0"
description = "QDash workflow service dependency project"
requires-python = ">=3.11,<3.13"
dependencies = [
    "prefect[dask]>=3,<4",
    "pymongo==4.17.0",
    "bunnet==1.3.0",
    "slack-sdk==3.41.0",
    "python-dotenv>=1.2.2",
    "numpy>=1.26.0,<2.5.0",
    "matplotlib>=3.8.0,<4.0.0",
    "pyyaml==6.0.3",
    "qubex[backend]",
    "filelock>=3.17.0",
    "gitpython>=3.1.50",
    "reportlab>=4.4.1",
    "pillow>=12.2.0",
    "ruamel.yaml>=0.18.0",
    "pydantic",
    "pydantic-settings",
    "openai",
    "fastapi",
    "uvicorn[standard]",
]

[tool.uv]
package = false
